# solgig

./: .gitignore  Anchor.toml  README.md
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/__tests__/: routes.test.ts
backend/src/db/: pool.ts  schema.sql
backend/src/middleware/: errorHandler.ts
backend/src/routes/: applications.ts  jobs.ts  profiles.ts  reviews.ts  search.ts
backend/src/types/: index.ts
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/app/messages/: page.tsx
frontend/app/profile/[wallet]/: page.tsx
frontend/components/: EscrowStatus.tsx  JobCard.tsx  JobFilters.tsx  MilestoneTracker.tsx  Navbar.tsx  ProposalForm.tsx  ReviewCard.tsx  ReviewStars.tsx
frontend/lib/: api.ts  constants.ts  mockData.ts  types.ts
frontend/providers/: WalletProvider.tsx
programs/solgig/: Cargo.toml
programs/solgig/src/: error.rs  lib.rs  state.rs
programs/solgig/src/instructions/: accept_application.rs  apply_to_job.rs  complete_milestone.rs  create_job.rs  dispute.rs  fund_escrow.rs  leave_review.rs  mod.rs  release_payment.rs  resolve_dispute.rs
