[package]
name = "solgig"
version = "0.1.0"
description = "SolGig – decentralised freelance marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solgig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
# Required so that the solana_program::pubkey! macro can resolve its internal paths.
solana-program = "~1.18"
